2009-03-07  Matevz Tadel  <matevz.tadel@ijs.si>

	Explicit usage of bash, quote vulnerable constructs in shell scripts.

	* Makefile:
	* MakeBuildExternal.inc:
	* MakeBuildGled.inc:
	* external/Makefile:
	Specify SHELL=/bin/bash.

	* gled/Makefile:
	Replace 'source' with '.' in canned target commands.

	* greed/top-blob/README:
	In instructions for bash, replace 'source' with '.'.
	Format the instructions so that they can be cut-n-pasted for both
	shell-types.

	* greed/top-blob/gled-env-dump.csh:
	* greed/top-blob/gled-env-dump.sh:
	* greed/top-blob/gled-env.csh:
	* greed/top-blob/gled-env.sh:
	* greed/top-blob/greed-demo-menu.sh:
	* greed/top-blob/greed-demo.sh:
	Quote all constructs where ' ' in path could lead to problems.
	Where relevant, replace 'source' with '.'.

2009-03-03  Matevz Tadel  <matevz.tadel@ijs.si>

	* external/glew/glew.pl:
	Make sure lib/ exists before copying stuff from lib64/.

2009-03-03  Matevz Tadel  <matevz.tadel@ijs.si>

	* external/root/root.pl:
	Disable usage of built-in freetype.
	It conflicts with the system-one (used by fltk) - at least on
	ubuntu-8.10.

2009-03-01  Matevz Tadel  <matevz.tadel@ijs.si>

	* external/glew/glew.pl:
	Install libs into lib/ also on 64-bit systems (avoid lib64/).

2009-03-01  Matevz Tadel  <matevz.tadel@ijs.si>

	Include glew among externals.

	* external/glew:
	* external/glew/Makefile:
	* external/glew/glew.pl:
	New files for building glew.

	* external/Makefile:
	Register glew as package.
	Temporarily set as the first target - for easier testing.

2009-02-28  Matevz Tadel  <matevz.tadel@ijs.si>

	* greed/top-blob/greed-demo-menu.sh:
	* greed/top-blob/greed-demo.sh:
	Fix environment script invocation - the file name has changed.

2009-02-28  Matevz Tadel  <matevz.tadel@ijs.si>

	Add csh support. Cleanup of stuff.

	* greed/top-blob/gled-env-dump.sh:
	* greed/top-blob/gled-env.sh:
	Rename gled-env.sh to gled-env-dump.sh (to make it clear it dumps).